Fix rolltemplate margin and layout, fix textarea padding
Removed unnecessary <br> on rolltemplates that were causing extra margins to break its box.
Added paddings on textareas for better visualization.
Updated rolltemplate color palette to better distinguish from the dark theme background.

--- a/3DX/3dx.css
+++ b/3DX/3dx.css
@@ -60,7 +60,8 @@ textarea {
 }
 .largedialog textarea {
     height: 100%;
-    width: 100%;
+    padding-inline: 0.3rem;
+    width: calc(100% - 0.6rem);
 }
 .ui-dialog .charsheet input {
     height: 100%;
@@ -716,9 +717,12 @@ label, input, button, select, textarea {
     font-size: 1.5rem;
 }
 
+.sheet-rolltemplate-3dxdano {
+    padding-top: 1.5rem;
+}
 .sheet-rolltemplate-3dxdano div.sheet-roll-container {
     align-items: center;
-    background: #181818;
+    background: #101010;
     border: solid thin #484848;
     border-radius: 10px;
     display: flex;
@@ -728,10 +732,10 @@ label, input, button, select, textarea {
 .sheet-rolltemplate-3dxdano div.sheet-roll-container span.sheet-roll-dano {
     background: #303030;
     border-radius: 10px 10px 0 0;
-    color: #b0b0b0;
+    color: #D3D3D3;
     font-family: Arial;
-    margin-bottom: 2rem;
-    padding-block: 0.5rem;
+    line-height: 100%;
+    padding-block: 0.6rem;
     text-align: center;
     width: 100%;
 }
@@ -739,7 +743,7 @@ label, input, button, select, textarea {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-block: 2rem;
 }
 .sheet-rolltemplate-3dxdano div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-actionname {
     color: #D3D3D3;
@@ -758,9 +762,12 @@ label, input, button, select, textarea {
     padding: 0.5rem;
 }
 
+.sheet-rolltemplate-3dxproficiencia {
+    padding-top: 1.5rem;
+}
 .sheet-rolltemplate-3dxproficiencia div.sheet-roll-container {
     align-items: center;
-    background: #181818;
+    background: #101010;
     border: solid thin #484848;
     border-radius: 10px;
     display: flex;
@@ -768,11 +775,11 @@ label, input, button, select, textarea {
     width: 100%;
 }
 .sheet-rolltemplate-3dxproficiencia div.sheet-roll-container span.sheet-roll-proficiencia {
-    background: #303030;
+    background: #282828;
     border-radius: 10px 10px 0 0;
-    color: #b0b0b0;
+    color: #D3D3D3;
     font-family: Arial;
-    margin-bottom: 2rem;
+    line-height: 100%;
     padding-block: 0.5rem;
     text-align: center;
     width: 100%;
@@ -781,7 +788,7 @@ label, input, button, select, textarea {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-block: 2rem;
 }
 .sheet-rolltemplate-3dxproficiencia div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-actionname {
     color: #D3D3D3;
@@ -790,7 +797,7 @@ label, input, button, select, textarea {
     margin-right: 1rem;
 }
 .sheet-rolltemplate-3dxproficiencia div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-macroresult span {
-    background-color: #303030;
+    background-color: #282828;
     border: solid thin #404040;
     border-radius: 6px;
     color: #D3D3D3;
@@ -800,9 +807,12 @@ label, input, button, select, textarea {
     padding: 0.5rem;
 }
 
+.sheet-rolltemplate-3dxrecurso {
+    padding-top: 1.5rem;
+}
 .sheet-rolltemplate-3dxrecurso div.sheet-roll-container {
     align-items: center;
-    background: #181818;
+    background: #101010;
     border: solid thin #484848;
     border-radius: 10px;
     display: flex;
@@ -810,11 +820,11 @@ label, input, button, select, textarea {
     width: 100%;
 }
 .sheet-rolltemplate-3dxrecurso div.sheet-roll-container span.sheet-roll-recurso {
-    background: #303030;
+    background: #282828;
     border-radius: 10px 10px 0 0;
-    color: #b0b0b0;
+    color: #D3D3D3;
     font-family: Arial;
-    margin-bottom: 2rem;
+    line-height: 100%;
     padding-block: 0.5rem;
     text-align: center;
     width: 100%;
@@ -823,7 +833,7 @@ label, input, button, select, textarea {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-block: 2rem;
 }
 .sheet-rolltemplate-3dxrecurso div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-actionname {
     color: #D3D3D3;
@@ -832,7 +842,7 @@ label, input, button, select, textarea {
     margin-right: 1rem;
 }
 .sheet-rolltemplate-3dxrecurso div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-macroresult span {
-    background-color: #303030;
+    background-color: #282828;
     border: solid thin #404040;
     border-radius: 6px;
     color: #D3D3D3;
@@ -842,10 +852,12 @@ label, input, button, select, textarea {
     padding: 0.5rem;
 }
 
-
+.sheet-rolltemplate-3dxiniciativa {
+    padding-top: 1.5rem;
+}
 .sheet-rolltemplate-3dxiniciativa div.sheet-roll-container {
     align-items: center;
-    background: #181818;
+    background: #101010;
     border: solid thin #484848;
     border-radius: 10px;
     display: flex;
@@ -853,11 +865,11 @@ label, input, button, select, textarea {
     width: 100%;
 }
 .sheet-rolltemplate-3dxiniciativa div.sheet-roll-container span.sheet-roll-iniciativa {
-    background: #303030;
+    background: #282828;
     border-radius: 10px 10px 0 0;
-    color: #b0b0b0;
+    color: #D3D3D3;
     font-family: Arial;
-    margin-bottom: 2rem;
+    line-height: 100%;
     padding-block: 0.5rem;
     text-align: center;
     width: 100%;
@@ -866,16 +878,10 @@ label, input, button, select, textarea {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
-}
-.sheet-rolltemplate-3dxiniciativa div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-charactername {
-    color: #D3D3D3;
-    font-family: Arial;
-    font-size: 1.4rem;
-    margin-right: 1rem;
+    margin-block: 2rem;
 }
 .sheet-rolltemplate-3dxiniciativa div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-macroresult span {
-    background-color: #303030;
+    background-color: #282828;
     border: solid thin #404040;
     border-radius: 6px;
     color: #D3D3D3;
@@ -885,9 +891,12 @@ label, input, button, select, textarea {
     padding: 0.5rem;
 }
 
+.sheet-rolltemplate-3dxgenerico {
+    padding-top: 1.5rem;
+}
 .sheet-rolltemplate-3dxgenerico div.sheet-roll-container {
     align-items: center;
-    background: #181818;
+    background: #101010;
     border: solid thin #484848;
     border-radius: 10px;
     display: flex;
@@ -895,11 +904,11 @@ label, input, button, select, textarea {
     width: 100%;
 }
 .sheet-rolltemplate-3dxgenerico div.sheet-roll-container span.sheet-roll-generico {
-    background: #303030;
+    background: #282828;
     border-radius: 10px 10px 0 0;
-    color: #b0b0b0;
+    color: #D3D3D3;
     font-family: Arial;
-    margin-bottom: 2rem;
+    line-height: 100%;
     padding-block: 0.5rem;
     text-align: center;
     width: 100%;
@@ -908,10 +917,10 @@ label, input, button, select, textarea {
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-block: 2rem;
 }
 .sheet-rolltemplate-3dxgenerico div.sheet-roll-container div.sheet-roll-wrap span.sheet-roll-macroresult span {
-    background-color: #303030;
+    background-color: #282828;
     border: solid thin #404040;
     border-radius: 6px;
     color: #D3D3D3;
